fix scrollbar page data

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -18,7 +18,7 @@
 }
 
 .AppTemplate-navbar {
-  max-height: 100vh;
+  max-height: 500px;
   overflow: auto;
 }
 
